--- a/friends.html
+++ b/friends.html
@@ -25,21 +25,25 @@
 
     <nav class="nav">
       <ul class="nav__list">
-        <li class="nav_btn">
-          <a class="nav_link" href="friends.html"
+        <li class="nav__btn">
+          <a class="nav__link" href="friends.html"
             ><i class="fas fa-user fa-2x"></i
           ></a>
         </li>
-        <li class="nav_btn">
-          <a class="nav_link" href="#"><i class="far fa-comment fa-2x"></i></a>
+        <li class="nav__btn">
+          <a class="nav__link" href="#">
+            <span class="nav__notification">1</span>
+            <i class="far fa-comment fa-2x"></i>
+          </a>
         </li>
-        <li class="nav_btn">
-          <a class="nav_link" href="#"><i class="fas fa-search fa-2x"></i></a>
+        <li class="nav__btn">
+          <a class="nav__link" href="#"><i class="fas fa-search fa-2x"></i></a>
         </li>
-        <li class="nav_btn">
-          <a class="nav_link" href="#"
-            ><i class="fas fa-ellipsis-h fa-2x"></i
-          ></a>
+        <li class="nav__btn">
+          <a class="nav__link" href="#">
+            <span class="nav__notification__2"></span>
+            <i class="fas fa-ellipsis-h fa-2x"></i>
+          </a>
         </li>
       </ul>
     </nav>
