--- a/friends.html
+++ b/friends.html
@@ -104,6 +104,9 @@
         </li>
       </ul>
     </nav>
+    <div id="splash-screen">
+      <i class="fas fa-comment"></i>
+    </div>
 
     <script
       src="https://kit.fontawesome.com/f12c34d35e.js"
