--- a/find.html
+++ b/find.html
@@ -114,6 +114,10 @@
       </ul>
     </nav>
 
+    <div id="no-mobile">
+      <span>Your screen is too big ㅠㅠ</span>
+    </div>
+
     <script
       src="https://kit.fontawesome.com/f12c34d35e.js"
       crossorigin="anonymous"
