--- a/friends.html
+++ b/friends.html
@@ -108,6 +108,10 @@
       <i class="fas fa-comment"></i>
     </div>
 
+    <div id="no-mobile">
+      <span>Your screen is too big ㅠㅠ</span>
+    </div>
+
     <script
       src="https://kit.fontawesome.com/f12c34d35e.js"
       crossorigin="anonymous"
