--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
       <a href="#">Find Kokoa Account or Password</a>
     </form>
 
+    <div id="no-mobile">
+      <span>Your screen is too big ㅠㅠ</span>
+    </div>
+
     <script
       src="https://kit.fontawesome.com/f12c34d35e.js"
       crossorigin="anonymous"
