--- a/chats.html
+++ b/chats.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chats - Kokoa Clone</title>
+    <title>Chats - PSG World</title>
   </head>
   <body>
     <div class="status-bar">
@@ -17,7 +17,7 @@
         <span>18:43</span>
       </div>
       <div class="status-bar__column">
-        <span>110%</span>
+        <span>100%</span>
         <i class="fas fa-battery-full fa-lg"></i>
         <i class="fas fa-bolt"></i>
       </div>
@@ -44,12 +44,12 @@
             <div clasdd="user-component__text ">
               <h4 class="user-component__title">Leo Messi</h4>
               <h6 class="user-component__subtitle">
-                Please check My Kokoa Account Info
+                Please check My PSG Account Info
               </h6>
             </div>
           </div>
           <div class="user-component__column">
-            <span class="user-component__time">21:22</span>
+            <span class="user-component__time">21:27</span>
             <div class="badge">1</div>
           </div>
         </div>
