--- a/chat.html
+++ b/chat.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Settings - Kokoa Clone</title>
+    <title>Settings - PSG World</title>
   </head>
   <body id="chat-screen">
     <div class="status-bar">
@@ -17,7 +17,7 @@
         <span>18:43</span>
       </div>
       <div class="status-bar__column">
-        <span>110%</span>
+        <span>100%</span>
         <i class="fas fa-battery-full fa-lg"></i>
         <i class="fas fa-bolt"></i>
       </div>
@@ -30,7 +30,7 @@
         </a>
       </div>
       <div class="alt-header__column">
-        <h1 class="alt-header__title">니꼬</h1>
+        <h1 class="alt-header__title">Leo Messi</h1>
       </div>
       <div class="alt-header__column">
         <sapn><i class="fas fa-search fa-lg"></i></sapn>
@@ -39,12 +39,12 @@
     </header>
 
     <main class="main-screen main-chat">
-      <div class="chat__timestamp">Tuesday, June 30, 2020</div>
+      <div class="chat__timestamp">Tuesday, August 17, 2021</div>
 
       <div class="message-row">
         <img src="messi.jpg" />
         <div class="message-row__content">
-          <span class="message__author">Nicolas</span>
+          <span class="message__author">Leo Messi</span>
           <div class="message__info">
             <span class="message__bubble">Hi!</span>
             <span class="message__time">21:27</span>
@@ -55,7 +55,7 @@
       <div class="message-row message-row--own">
         <div class="message-row__content">
           <div class="message__info">
-            <span class="message__bubble">Hi nice to meet you!</span>
+            <span class="message__bubble">Welcom to PSG!</span>
             <span class="message__time">21:27</span>
           </div>
         </div>
