--- a/friends.html
+++ b/friends.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Friend - Kokoa Clone</title>
+    <title>Friend - PSG World</title>
   </head>
   <body>
     <div class="status-bar">
@@ -17,7 +17,7 @@
         <span>18:43</span>
       </div>
       <div class="status-bar__column">
-        <span>110%</span>
+        <span>100%</span>
         <i class="fas fa-battery-full fa-lg"></i>
         <i class="fas fa-bolt"></i>
       </div>
@@ -59,12 +59,12 @@
         <div class="user-component">
           <div class="user-component__column">
             <img
-              src="messi.jpg"
+              src="image/psg_logo_sm.jpg"
               class="user-component__avatar user-component__avatar--sm"
             />
             <div clasdd="user-component__text ">
               <h4 class="user-component__title user-component__title--not-bold">
-                Channel
+                PSG
               </h4>
             </div>
           </div>
@@ -104,8 +104,9 @@
         </li>
       </ul>
     </nav>
-    <div id="splash-screen">
-      <i class="fas fa-comment"></i>
+
+    <div id="splash-screen__main-background">
+      <img src="image/psg_logo.png" />
     </div>
 
     <div id="no-mobile">
