--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Welcome to Kokoa Clone</title>
+    <title>Welcome to PSG World</title>
   </head>
   <body>
     <div class="status-bar">
@@ -17,16 +17,16 @@
         <span>18:43</span>
       </div>
       <div class="status-bar__column">
-        <span>110%</span>
+        <span>100%</span>
         <i class="fas fa-battery-full fa-lg"></i>
         <i class="fas fa-bolt"></i>
       </div>
     </div>
 
     <header class="welcome-header">
-      <h1 class="welcome-header__title">Welcome to Kokoa Clone</h1>
+      <h1 class="welcome-header__title">Welcome to PSG World</h1>
       <p class="welcome-header__text">
-        If you have a Kokoa Account, log in with your email or phone number.
+        If you have a PSG Account, log in with your email or phone number.
       </p>
     </header>
 
@@ -34,8 +34,12 @@
       <input name="username" type="text" placeholder="email or phone number" />
       <input name="password" type="password" placeholder="password" />
       <input type="submit" value="Log In" />
-      <a href="#">Find Kokoa Account or Password</a>
+      <a href="#">Find PSG Account or Password</a>
     </form>
+
+    <div id="splash-screen__main-background">
+      <img src="image/psg_logo.png" />
+    </div>
 
     <div id="no-mobile">
       <span>Your screen is too big 😢</span>
