--- a/settings.html
+++ b/settings.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Settings - Kokoa Clone</title>
+    <title>Settings - PSG World</title>
   </head>
   <body>
     <div class="status-bar">
@@ -17,7 +17,7 @@
         <span>18:43</span>
       </div>
       <div class="status-bar__column">
-        <span>110%</span>
+        <span>100%</span>
         <i class="fas fa-battery-full fa-lg"></i>
         <i class="fas fa-bolt"></i>
       </div>
@@ -49,7 +49,7 @@
         <li class="settings__setting">
           <div class="settings__setting-column">
             <i class="fas fa-flask"></i>
-            <span>Kokoa Lab</span>
+            <span>PSG Lab</span>
           </div>
           <div class="settings__setting-column"></div>
         </li>
